fixed invisible div in ribbon bar blocking pointer events #576

--- a/visualization/app/codeCharta/ui/ribbonBar/ribbonBar.component.scss
+++ b/visualization/app/codeCharta/ui/ribbonBar/ribbonBar.component.scss
@@ -12,7 +12,7 @@ ribbon-bar-component {
 	$bodySize: 0.9em;
 	$toggleButtonSize: 35;
 
-	pointer-events: all;
+	pointer-events: none;
 	display: flex;
 
 	search-panel-component #search-panel.expanded {
@@ -40,6 +40,7 @@ ribbon-bar-component {
 
 		.section {
 			display: inline-block;
+			pointer-events: all;
 			height: 100%;
 			width: auto;
 			padding-top: $padding + px;
